<resources>
    <string name="app_name">Cadê meu Ônibus? (THE)</string>

    <!-- Menu Principal -->
    <string name="main_titulo">O que você deseja?</string>
    <string name="menu_linhas_btn">Achar uma linha</string>
    <string name="menu_paradas_btn">Paradas próximas</string>
    <string name="menu_veiculos_btn">Cadê meu ôniubs?</string>
    <string name="menu_rotas_btn">Que ônibus eu pego?</string>

    <!-- Paradas -->
    <string name="menu_paradas_titulo">Paradas Próximas</string>
    <string name="menu_paradas_hint">informe a parada...</string>
    <string name="detail_parada_codigoParadaLbl">Código: </string>
    <string name="detail_parada_enderecoParadaLbl">Endereço: </string>
    <string name="detail_parada_linhasLbl">Linhas</string>
    <string name="detail_parada_verNoMapaBtn">Ver no mapa</string>

    <!-- Linhas -->
    <string name="menu_linhas_titulo">Achar uma linha</string>
    <string name="menu_linhas_hint">informe a linha...</string>
    <string name="detail_linha_codigoLinhaLbl">Linha: </string>
    <string name="detail_linha_origemLinhaLbl">Origem: </string>
    <string name="detail_linha_retornoLinhaLbl">Retorno: </string>
    <string name="detail_linha_isCircularLbl">Cirular: </string>
    <string name="detail_linha_paradasLbl">Lista de Paradas</string>

    <!-- Rotas-->
    <string name="menu_rotas_titulo">Que ônibus eu pego?</string>
    <string name="menu_rotas_origem_lbl">Origem: </string>
    <string name="menu_rotas_origem_btn">Selecionar Origem</string>
    <string name="menu_rotas_destino_lbl">Destino: </string>
    <string name="menu_rotas_destino_btn">Selecionar Destino</string>
    <string name="menu_rotas_usarMeuLocal_lbl">Usar meu local como origem</string>
    <string name="menu_rotas_gerarRota_btn">Mostra opções</string>
    <string name="gerarRotas_escolharotaLbl">Escolha uma opção</string>

    <!-- Veículos -->
    <string name="menu_veiculos_titulo">Cadê meu ônibus?</string>
    <string name="menu_veiculos_escolhaLinha">Escolha uma linha: </string>
    <string name="detail_veiculo_qtdParadasLbl">Quantidade de paradas: </string>
    <string name="detail_veiculo_qtdVeiculosLbl">Quantidade de veículos: </string>
    <string name="detail_veiculo_linhaLbl">Linha:</string>


    <!-- Geral -->
    <string name="carregando">Carregando</string>
    <string name="confirma">Confirma</string>
    <string name="certo">Certo</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atualizando_mapa">Atualizando mapa...</string>

    <!-- Erros -->
    <string name="iniciar_app">Não foi possível iniciar o aplicativo</string>
    <string name="erro_carregar_linhas">Não foi possível carregar as Linhas</string>
    <string name="erro_carregar_paradas">Não foi possível carregar as Paradas</string>
    <string name="erro_carregar_rotas">Não foi possível carregar as Rotas</string>
    <string name="erro_carregar_veiculos">Não foi possível carregar os Veículos da Linha Informada</string>


    <!-- Ads -->
    <string name="admob_id">ca-app-pub-9555372692160507~5287728470</string>
    <string name="banner_menu_principal">ca-app-pub-9555372692160507/2194661277</string>
    <string name="banner_menu_linhas">ca-app-pub-9555372692160507/2055060473</string>
    <string name="banner_detail_linhas">ca-app-pub-9555372692160507/6485260074</string>
    <string name="banner_mapa_linhas">ca-app-pub-9555372692160507/7961993278</string>
    <string name="banner_menu_paradas">ca-app-pub-9555372692160507/9438726470</string>
    <string name="banner_detail_paradas">ca-app-pub-9555372692160507/1915459670</string>
    <string name="banner_mapa_paradas">ca-app-pub-9555372692160507/4868926079</string>
    <string name="banner_menu_rotas">ca-app-pub-9555372692160507/6345659278</string>
    <string name="banner_origem_rotas">ca-app-pub-9555372692160507/7822392471</string>
    <string name="banner_destino_rotas">ca-app-pub-9555372692160507/9299125678</string>
    <string name="banner_selecionar_rotas">ca-app-pub-9555372692160507/1775858875</string>
    <string name="banner_mapa_rotas">ca-app-pub-9555372692160507/3252592074</string>
    <string name="banner_menu_veiculos">ca-app-pub-9555372692160507/4537522079</string>
    <string name="banner_mapa_veiculos">ca-app-pub-9555372692160507/6014255279</string>



</resources>
