<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Rotas.RotasMenuActivity">

    <TextView
        android:id="@+id/menuRotasLbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_rotas_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <CheckedTextView
        android:checked="false"
        android:id="@+id/origemCheckedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menuRotasLbl"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_rotas_origem_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Switch
        android:checked="false"
        android:id="@+id/meuLocalSwtich"
        android:layout_below="@+id/origemCheckedTextView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_rotas_usarMeuLocal_lbl"
        />

    <Button
        android:id="@+id/selectionarOrigemBtn"
        android:layout_below="@+id/meuLocalSwtich"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="selecionarOrigemActivity"
        android:text="@string/menu_rotas_origem_btn"
        />

    <CheckedTextView
        android:checked="false"
        android:id="@+id/destinoCheckedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/selectionarOrigemBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_rotas_destino_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Button
        android:id="@+id/menu_rotas_destino_btn"
        android:layout_below="@+id/destinoCheckedTextView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="selecionarDestinoActivity"
        android:text="@string/menu_rotas_destino_btn"
        />

    <Button
        android:id="@+id/gerarRotaBtn"
        android:layout_below="@+id/menu_rotas_destino_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="gerarRotaActivity"
        android:text="@string/menu_rotas_gerarRota_btn"
        />

    <com.google.android.gms.ads.AdView
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_menu_rotas"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
