<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MenuPrincipalActivity">

    <TextView
        android:id="@+id/mainTituloTxt"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_width="wrap_content"
        android:text="@string/main_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Button
        android:id="@+id/menuLinhasBtn"
        android:layout_above="@+id/menuParadasBtn"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="displayMenuLinhasActivity"
        android:text="@string/menu_linhas_btn"
        />

    <Button
        android:id="@+id/menuParadasBtn"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="displayMenuParadasActivity"
        android:text="@string/menu_paradas_btn"
        />

    <Button
        android:enabled="false"
        android:id="@+id/menuVeiculosBtn"
        android:layout_below="@+id/menuParadasBtn"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="displayMenuVeiculosActivity"
        android:text="@string/menu_veiculos_btn"
        />

    <Button
        android:enabled="false"
        android:id="@+id/menuRotasBtn"
        android:layout_below="@+id/menuVeiculosBtn"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="displayMenuRotasActivity"
        android:text="@string/menu_rotas_btn"
        />

    <com.google.android.gms.ads.AdView
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_menu_principal"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
