<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Veiculos.VeiculosMapaActivity">

    <TextView
        android:id="@+id/detailVeiculosTitleLbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_veiculos_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/linhaLbl"
        android:layout_below="@+id/detailVeiculosTitleLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_veiculo_linhaLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/denominacaoLinhaTxt"
        android:layout_below="@+id/detailVeiculosTitleLbl"
        android:layout_toRightOf="@+id/linhaLbl"
        android:layout_toEndOf="@+id/linhaLbl" />

    <TextView
        android:id="@+id/qtdVeiculosLbl"
        android:layout_below="@+id/denominacaoLinhaTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_veiculo_qtdVeiculosLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/qtdVeiculosTxt"
        android:layout_below="@+id/denominacaoLinhaTxt"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/qtdVeiculosLbl"
        android:layout_toRightOf="@+id/qtdVeiculosLbl"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/qtdParadasLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/qtdVeiculosLbl"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_veiculo_qtdParadasLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/qtdParadasTxt"
        android:layout_below="@+id/qtdVeiculosTxt"
        android:layout_toEndOf="@+id/qtdParadasLbl"
        android:layout_toRightOf="@+id/qtdParadasLbl"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <fragment
        android:id="@+id/map"
        android:layout_below="@+id/qtdParadasTxt"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        />

    <com.google.android.gms.ads.AdView
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_mapa_veiculos"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
