<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Rotas.RotasSelecionarRotaActivity">

    <TextView
        android:id="@+id/gerarRotaLbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu_rotas_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/ecolhaRotaLbl"
        android:layout_below="@+id/gerarRotaLbl"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/gerarRotas_escolharotaLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <ListView
        android:choiceMode="singleChoice"
        android:id="@+id/rotasListView"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/ecolhaRotaLbl"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <com.google.android.gms.ads.AdView
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_selecionar_rotas"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
