<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.Paradas.ParadasDetailActivity">

    <com.google.android.gms.ads.AdView
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_detail_paradas"
        android:id="@+id/adView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/denominacaoParadaTxt"
        android:layout_below="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/codigoParadaLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/denominacaoParadaTxt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_parada_codigoParadaLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/codigoParadaTxt"
        android:layout_below="@+id/denominacaoParadaTxt"
        android:layout_toEndOf="@+id/codigoParadaLbl"
        android:layout_toRightOf="@+id/codigoParadaLbl"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_parada_enderecoParadaLbl"
        android:id="@+id/enderecoParadaLbl"
        android:layout_below="@+id/codigoParadaLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/enderecoParadaTxt"
        android:layout_below="@+id/codigoParadaTxt"
        android:layout_toRightOf="@+id/enderecoParadaLbl"
        android:layout_toEndOf="@+id/enderecoParadaLbl"
        android:layout_alignRight="@+id/codigoParadaTxt"
        android:layout_alignEnd="@+id/codigoParadaTxt" />

    <TextView
        android:id="@+id/linhasLbl"
        android:layout_below="@+id/enderecoParadaTxt"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_parada_linhasLbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <ListView
        android:choiceMode="singleChoice"
        android:id="@+id/linhasListView"
        android:layout_below="@+id/linhasLbl"
        android:layout_centerHorizontal="true"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        />

    <Button
        android:enabled="false"
        android:id="@+id/verNoMapaBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detail_parada_verNoMapaBtn"
        android:onClick="displayParadasMapaActivity"
        />

</RelativeLayout>
