<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Linhas.LinhasDetailActivity$VeiculosDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_veiculos_titulo"
        android:id="@+id/detailVeiculosTitleLbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_veiculo_linhaLbl"
        android:id="@+id/linhaLbl"
        android:layout_below="@+id/detailVeiculosTitleLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/denominacaoLinhaTxt"
        android:layout_below="@+id/detailVeiculosTitleLbl"
        android:layout_toRightOf="@+id/linhaLbl"
        android:layout_toEndOf="@+id/linhaLbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_veiculo_qtdVeiculosLbl"
        android:id="@+id/qtdVeiculosLbl"
        android:layout_below="@+id/denominacaoLinhaTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/qtdVeiculosTxt"
        android:layout_below="@+id/denominacaoLinhaTxt"
        android:layout_toRightOf="@+id/qtdVeiculosLbl"
        android:layout_toEndOf="@+id/qtdVeiculosLbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_veiculo_qtdParadasLbl"
        android:id="@+id/qtdParadasLbl"
        android:layout_below="@+id/qtdVeiculosLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/qtdParadasTxt"
        android:layout_below="@+id/qtdVeiculosTxt"
        android:layout_toRightOf="@+id/qtdParadasLbl"
        android:layout_toEndOf="@+id/qtdParadasLbl" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qtdParadasTxt" />
</RelativeLayout>
